syntax = "proto3";

option go_package = "scmc/rpc/pb/image";

package image;

message ImageInfo {
    string name = 1;    // repo + tag
    string repo = 2;
    string tag = 3;
    string digest = 4;
}